--- a/package.json
+++ b/package.json
@@ -16,5 +16,29 @@
   "bugs": {
     "url": "https://github.com/mabregu/rick-and-morty-react/issues"
   },
-  "homepage": "https://github.com/mabregu/rick-and-morty-react#readme"
+  "homepage": "https://github.com/mabregu/rick-and-morty-react#readme",
+  "dependencies": {
+    "core-js": "^3.16.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "*",
+    "css-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.0",
+    "react-refresh": "^0.9.0",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
+  }
 }
